kube/json2html.yaml
apiVersion: v1
kind: Service
metadata:
  name: json2html
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: json2html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json2html
spec:
  selector:
    matchLabels:
      app: json2html
  replicas: 1
  template:
    metadata:
      labels:
        app: json2html
    spec:
      containers:
      - name: json2html
        image: bloopletech/json2html@sha256:e771ec78fa04dc64c8c3529f9d5e9059cee67ed7ba43723d077d14fba790448e
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
      imagePullSecrets:
      - name: regcred
