kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - json.bloople.net
    secretName: letsencrypt-prod
  rules:
  - host: json.bloople.net
    http:
      paths:
      - backend:
          serviceName: json2html
          servicePort: 80
